# cpp_team_sessions

./: CMakeLists.txt  CMakePresets.json  README.md
session_001_move_semantic/: CMakeLists.txt  README.md
session_001_move_semantic/examples/: ex_001_01_the_problem.cpp  ex_001_02_lvalue_rvalue.cpp  ex_001_02_move_constructor.cpp  ex_001_03_move_constructor.cpp  ex_001_04_perfect_forward.cpp  ex_001_05_stl_move_aware.cpp
